--- a/_posts/2019-10-15-Helm-2019.md
+++ b/_posts/2019-10-15-Helm-2019.md
@@ -4,7 +4,7 @@ title:      Helm 				# 标题
 subtitle:   Basics #副标题
 date:       2019-10-15 				# 时间
 author:     frankie 						# 作者
-header-img: img/home-bg-art.jpg 	#这篇文章标题背景图片
+header-img: img/helm-deployments.png 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
     - Helm
