--- a/_posts/2019-10-15-Helm.md
+++ b/_posts/2019-10-15-Helm.md
@@ -41,11 +41,17 @@ subjects:
     namespace: kube-system
 ```
 
+```
 kubectl create -f rbac-config.yaml
 
 helm init --service-account tiller --history-max 200
 
 helm init --upgrade
+
+helm repo update
+
+helm install stable/mysql
+```
 
 ![Imgur](https://i.imgur.com/YH5YlY6.png)
 
@@ -54,6 +60,10 @@ helm init --upgrade
 ![Imgur](https://i.imgur.com/flJ5yEF.png)
 
 Whenever you install a chart, a new release is created. So one chart can be installed multiple times into the same cluster. And each can be independently managed and upgraded.
+
+```
+helm ls
+```
 
 ![Imgur](https://i.imgur.com/z1uwziT.png)
 
@@ -68,3 +78,86 @@ A Release is an instance of a chart running in a Kubernetes cluster. One chart c
 With these concepts in mind, we can now explain Helm like this:
 
 Helm installs charts into Kubernetes, creating a new release for each installation. And to find new charts, you can search Helm chart repositories.
+
+### Search
+```
+helm search mysql
+```
+
+![Imgur](https://i.imgur.com/dca1Mzr.png)
+
+### Customizing
+
+```
+helm inspect values stable/mariadb
+
+$ cat << EOF > config.yaml
+mariadbUser: user0
+mariadbDatabase: user0db
+EOF
+$ helm install -f config.yaml stable/mariadb
+```
+
+### Install
+The helm install command can install from several sources:
+* A chart repository (as we’ve seen above)
+* A local chart archive (helm install foo-0.1.1.tgz)
+* An unpacked chart directory (helm install path/to/foo)
+* A full URL (helm install https://example.com/charts/foo-1.2.3.tgz)
+
+### Upgrade
+```
+helm upgrade -f panda.yaml happy-panda stable/mariadb
+```
+
+### Rollback
+```
+helm rollback happy-panda 1
+```
+
+### Delete
+```
+helm delete happy-panda
+```
+
+### List
+```
+helm list --all
+```
+
+### Repo
+```
+helm repo list
+```
+![Imgur](https://i.imgur.com/fmtb5i3.png)
+
+```
+helm repo add dev https://example.com/dev-charts
+helm repo update
+```
+
+### Creation
+```
+helm create deis-workflow
+```
+![Imgur](https://i.imgur.com/A9wbiu3.png)
+
+### Package
+```
+helm package deis-workflow
+helm install ./deis-workflow-0.1.0.tgz
+```
+![Imgur](https://i.imgur.com/byuYH9z.png)
+
+## TILLER, NAMESPACES AND RBAC
+In some cases you may wish to scope Tiller or deploy multiple Tillers to a single cluster. Here are some best practices when operating in those circumstances.
+
+1. Tiller can be installed into any namespace. By default, it is installed into kube-system. You can run multiple Tillers provided they each run in their own namespace.
+
+2. Limiting Tiller to only be able to install into specific namespaces and/or resource types is controlled by Kubernetes RBAC roles and rolebindings. You can add a service account to Tiller when configuring Helm via helm init --service-account <NAME>. You can find more information about that here.
+
+3. Release names are unique PER TILLER INSTANCE.
+
+4. Charts should only contain resources that exist in a single namespace.
+
+5. It is not recommended to have multiple Tillers configured to manage resources in the same namespace.
