--- a/_posts/2019-10-15-Helm-2019.md
+++ b/_posts/2019-10-15-Helm-2019.md
@@ -105,6 +105,14 @@ The helm install command can install from several sources:
 * An unpacked chart directory (helm install path/to/foo)
 * A full URL (helm install https://example.com/charts/foo-1.2.3.tgz)
 
+There are five different ways you can express the chart you want to install:
+
+1. By chart reference: helm install stable/mariadb
+2. By path to a packaged chart: helm install ./nginx-1.2.3.tgz
+3. By path to an unpacked chart directory: helm install ./nginx
+4. By absolute URL: helm install https://example.com/charts/nginx-1.2.3.tgz
+5. By chart reference and repo url: helm install –repo https://example.com/charts/ nginx
+
 ### Upgrade
 ```
 helm upgrade -f panda.yaml happy-panda stable/mariadb
@@ -142,12 +150,59 @@ helm create deis-workflow
 ```
 ![Imgur](https://i.imgur.com/A9wbiu3.png)
 
+![Imgur](https://i.imgur.com/gcOaPP3.png)
+
 ### Package
 ```
 helm package deis-workflow
 helm install ./deis-workflow-0.1.0.tgz
 ```
 ![Imgur](https://i.imgur.com/byuYH9z.png)
+
+### Dependency
+Helm charts store their dependencies in ‘charts/’. For chart developers, it is often easier to manage a single dependency file (‘requirements.yaml’) which declares all dependencies.
+```
+# requirements.yaml
+dependencies:
+- name: nginx
+  version: "1.2.3"
+  repository: "https://example.com/charts"
+- name: memcached
+  version: "3.2.1"
+  repository: "https://another.example.com/charts"
+```
+
+```
+# requirements.yaml
+dependencies:
+- name: nginx
+  version: "1.2.3"
+  repository: "file://../dependency-chart/nginx"
+```
+
+```
+helm dependency build [flags] CHART
+```
+
+```
+helm dependency list [flags] CHART
+```
+
+```
+helm dependency update [flags] CHART
+```
+
+### Inspect
+Inspect prints the contents of the Chart.yaml file and the values.yaml file.
+```
+helm inspect [CHART] [flags]
+```
+
+### Uninstall
+Uninstalls Tiller from a cluster
+```
+helm reset [flags]
+```
 
 ## TILLER, NAMESPACES AND RBAC
 In some cases you may wish to scope Tiller or deploy multiple Tillers to a single cluster. Here are some best practices when operating in those circumstances.
