--- a/_posts/2019-10-15-Helm-2019.md
+++ b/_posts/2019-10-15-Helm-2019.md
@@ -216,3 +216,57 @@ In some cases you may wish to scope Tiller or deploy multiple Tillers to a singl
 4. Charts should only contain resources that exist in a single namespace.
 
 5. It is not recommended to have multiple Tillers configured to manage resources in the same namespace.
+
+
+# Charts
+Helm uses a packaging format called charts. A chart is a collection of files that describe a related set of Kubernetes resources.
+
+Charts are created as files laid out in a particular directory tree, then they can be packaged into versioned archives to be deployed.
+
+A chart is organized as a collection of files inside of a directory. The directory name is the name of the chart (without versioning information). Thus, a chart describing WordPress would be stored in the wordpress/ directory.
+
+![Imgur](https://i.imgur.com/ivdAXco.png)
+
+## TEMPLATES AND VALUES
+All template files are stored in a chart’s templates/ folder. When Helm renders the charts, it will pass every file in that directory through the template engine.
+
+Values for the templates are supplied two ways:
+
+* Chart developers may supply a file called values.yaml inside of a chart. This file can contain default values.
+
+* Chart users may supply a YAML file that contains values. This can be provided on the command line with helm install.
+
+When a user supplies custom values, these values will override the values in the chart’s values.yaml file.
+
+
+
+
+
+
+
+Draft
+
+USING THE ‘REQUIRED’ FUNCTION
+```
+{{ required "A valid foo is required!" .Values.foo }}
+```
+The above will render the template when .Values.foo is defined, but will fail to render and exit when .Values.foo is undefined.
+
+
+Debugging Commands
+```
+helm install ./mychart --debug --dry-run
+```
+
+![Imgur](https://i.imgur.com/xvum1fh.png)
+
+Using --dry-run will make it easier to test your code, but it won’t ensure that Kubernetes itself will accept the templates you generate. It’s best not to assume that your chart will install just because --dry-run works.
+
+
+```
+helm lint is your go-to tool for verifying that your chart follows best practices
+
+helm install --dry-run --debug: We’ve seen this trick already. It’s a great way to have the server render your templates, then return the resulting manifest file.
+
+helm get manifest: This is a good way to see what templates are installed on the server.
+```
