--- a/_posts/2019-11-24-CMake-2019.md
+++ b/_posts/2019-11-24-CMake-2019.md
@@ -4,10 +4,10 @@ title:      CMake 				# 标题
 subtitle:   Build #副标题
 date:       2019-11-12 				# 时间
 author:     frankie 						# 作者
-header-img: img/cmake.png 	#这篇文章标题背景图片
+header-img: img/cmake_2.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
-    - Cmake
+    - CMake
 ---
 
 # Feature
@@ -18,7 +18,7 @@ tags:								#标签
 5. Efficiency
 6. Scalable
 
-# Drawback
+# Drawbacks
 1. Not simple and stupid solution
 2. CMake language and syntax
 3. Not working well with pkgconfig
