--- a/_posts/2019-11-24-CMake-2019.md
+++ b/_posts/2019-11-24-CMake-2019.md
@@ -35,6 +35,75 @@ tags:								#标签
 
 # First Trial with helloworld example
 
+```c++
+main.c 文件内容：
+//main.c
+
+#include <stdio.h>
+
+int main()
+{
+  printf(“Hello World from t1 Main!\n”);
+  return 0;
+}
+```
+
+```
+CmakeLists.txt 文件内容：
+PROJECT (HELLO)
+SET(SRC_LIST main.c)
+MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
+MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
+ADD_EXECUTABLE(hello ${SRC_LIST})
+```
+
+![Imgur](https://i.imgur.com/06DvRtK.png)
+
+# Bacis Syntac
+```
+PROJECT(projectname [CXX] [C] [Java])
+
+1. ${HELLO_BINARY_DIR}
+2. ${HELLO_SOURCE_DIR}
+3. ${PROJECT_SOURCE_DIR}
+4. ${PROJECT_SOURCE_DIR}
+```
+
+```
+SET(VAR [VALUE] [CACHE TYPE DOCSTRING [FORCE]])
+e.g.
+1. SET(SRC_LIST main.c)
+2. SET(SRC_LIST main.c t1.c t2.c)
+```
+
+```
+MESSAGE([SEND_ERROR | STATUS | FATAL_ERROR] "message to display"...)
+1. SEND_ERROR, 产生错误，生成过程被跳过
+2. SATUS, 输出前缀为--的信息
+3. FATAL_ERROR, 立即终止所有cmake过程
+```
+
+```
+ADD_EXECUTABLE(hello ${SRC_LIST})
+
+ADD_EXECUTABLE(hello main.c func.c) or ADD_EXECUTABLE(hello main.c;func.c)
+```
+
+## Recap
+1. Using ${} to refer variables, but in IF statement, variables are directly used without ${}
+2. Command(para1 para2 ...) - parameters are separated by space or semicolon
+3. Command is case insensitive, while parameters and variables are case sensitive. In practice, it is recommended to use all CAPITALS.
+4. The project name in PROJECT() is not the generated executable file as ADD_EXECUTABLE()
+5. SET(SRC_LIST main.c) == SET(SRC_LIST “main.c”) {SET(SRC_LIST “fu nc.c”)}
+6. make clean
+7. in-source build vs. out-of-source build (No impact on original source code folder)
+
+```
+-- This is BINARY dir /home/aiq/Downloads/cmake/t1/build
+-- This is SOURCE dir /home/aiq/Downloads/cmake/t1
+```
+
+![Imgur](https://i.imgur.com/0XAHGi9.png)
 
 # Reference
 * Cmake 实践: http://file.ncnynl.com/ros/CMake%20Practice.pdf
