--- a/_posts/2019-11-24-CMake-2019.md
+++ b/_posts/2019-11-24-CMake-2019.md
@@ -10,7 +10,7 @@ tags:								#标签
     - CMake
 ---
 
-# Feature
+# Features
 1. Open Source
 2. Cross Platform
 3. Fit for large project, e.g. KDE4
@@ -31,7 +31,7 @@ tags:								#标签
 
 # Installation
 1. Built-in installation in many Linux Distributions (may be not the latest version)
-2. Source Code: https://cmake.org/download/
+2. [Source Code Build](https://cmake.org/download/)
 
 # First Trial with helloworld example
 
@@ -59,7 +59,7 @@ ADD_EXECUTABLE(hello ${SRC_LIST})
 
 ![Imgur](https://i.imgur.com/06DvRtK.png)
 
-# Bacis Syntac
+# Basic Syntax
 ```
 PROJECT(projectname [CXX] [C] [Java])
 
@@ -94,7 +94,7 @@ ADD_EXECUTABLE(hello main.c func.c) or ADD_EXECUTABLE(hello main.c;func.c)
 2. Command(para1 para2 ...) - parameters are separated by space or semicolon
 3. Command is case insensitive, while parameters and variables are case sensitive. In practice, it is recommended to use all CAPITALS.
 4. The project name in PROJECT() is not the generated executable file as ADD_EXECUTABLE()
-5. SET(SRC_LIST main.c) == SET(SRC_LIST “main.c”) {SET(SRC_LIST “fu nc.c”)}
+5. SET(SRC_LIST main.c) == SET(SRC_LIST "main.c") {SET(SRC_LIST "fu nc.c")}
 6. make clean
 7. in-source build vs. out-of-source build (No impact on original source code folder)
 
@@ -105,5 +105,31 @@ ADD_EXECUTABLE(hello main.c func.c) or ADD_EXECUTABLE(hello main.c;func.c)
 
 ![Imgur](https://i.imgur.com/0XAHGi9.png)
 
+# Out Of Source Build
+```
+mkdir ./t2/src
+
+vim ./t2/src/CMakeLists.txt
+
+ADD_EXECUTABLE(hello main.c)
+
+---
+
+vim ./t2/CMakeLists.txt
+
+PROJECT(HELLO)
+ADD_SUBDIRECTORY(src bin)
+
+mkdir  ./t2/build
+cmake ..
+make
+```
+
+```
+ADD_SUBDIRECTORY(source_dir [binary_dir] [EXCLUDE_FROM_ALL])
+```
+
+![Imgur](https://i.imgur.com/PULcy48.png)
+
 # Reference
-* Cmake 实践: http://file.ncnynl.com/ros/CMake%20Practice.pdf
+* [Cmake 实践](http://file.ncnynl.com/ros/CMake%20Practice.pdf)
