--- a/_posts/2019-11-24-CMake-2019.md
+++ b/_posts/2019-11-24-CMake-2019.md
@@ -125,11 +125,120 @@ cmake ..
 make
 ```
 
+![Imgur](https://i.imgur.com/PULcy48.png)
+
 ```
 ADD_SUBDIRECTORY(source_dir [binary_dir] [EXCLUDE_FROM_ALL])
 ```
 
-![Imgur](https://i.imgur.com/PULcy48.png)
+```
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
+```
+
+```
+INSTALL
+CMAKE_INSTALL_PREFIX
+cmake -DCMAKE_INSTALL_PREFIX=/usr .
+
+
+INSTALL(TARGETS targets...
+[[ARCHIVE|LIBRARY|RUNTIME]
+[DESTINATION <dir>]
+[PERMISSIONS permissions...]
+[CONFIGURATIONS
+[Debug|Release|...]]
+[COMPONENT <component>]
+[OPTIONAL]
+] [...])
+
+-> {CMAKE_INSTALL_PREFIX}/<DESTINATION 定义的路径> (relative path in DESTINATION)
+
+
+e.g.
+INSTALL(TARGETS myrun mylib mystaticlib
+RUNTIME DESTINATION bin
+LIBRARY DESTINATION lib
+ARCHIVE DESTINATION libstatic
+)
+
+
+INSTALL(FILES files... DESTINATION <dir>
+[PERMISSIONS permissions...]
+[CONFIGURATIONS [Debug|Release|...]]
+[COMPONENT <component>]
+[RENAME <name>] [OPTIONAL])
+->
+OWNER_WRITE, OWNER_READ, GROUP_READ,和WORLD_READ，即644权限
+
+TINATION <dir>
+[PERMISSIONS permissions...]
+[CONFIGURATIONS [Debug|Release|...]]
+[COMPONENT <component>]
+[RENAME <name>] [OPTIONAL])
+->
+OWNER_EXECUTE, GROUP_EXECUTE, 和WORLD_EXECUTE，即755权限
+
+
+INSTALL(DIRECTORY dirs... DESTINATION <dir>
+[FILE_PERMISSIONS permissions...]
+[DIRECTORY_PERMISSIONS permissions...]
+[USE_SOURCE_PERMISSIONS]
+[CONFIGURATIONS [Debug|Release|...]]
+[COMPONENT <component>]
+[[PATTERN <pattern> | REGEX <regex>]
+[EXCLUDE] [PERMISSIONS permissions...]] [...])
+->
+abc 和 abc/有很大的区别。
+如果目录名不以/结尾，那么这个目录将被安装为目标路径下的 abc，如果目录名以/结尾，
+代表将这个目录中的内容安装到目标路径，但不包括这个目录本身。
+
+e.g.
+INSTALL(DIRECTORY icons scripts/ DESTINATION share/myproj
+PATTERN "CVS" EXCLUDE
+PATTERN "scripts/*"
+PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+GROUP_EXECUTE GROUP_READ)
+```
+
+# Better Build
+## Files Layout
+
+![Imgur](https://i.imgur.com/jht462c.png)
+
+```
+#main folder CMakeLists.txt
+
+cmake_minimum_required(VERSION 3.10)
+
+PROJECT(HELLO)
+
+INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t3)
+INSTALL(PROGRAMS runhello.sh DESTINATION bin)
+INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t3)
+
+ADD_SUBDIRECTORY(src bin)
+```
+
+```
+#src folder CMakeLists
+
+cmake_minimum_required(VERSION 3.10)
+
+INSTALL(PROGRAMS ${PROJECT_BINARY_DIR}/bin/hello DESTINATION bin)
+MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
+MESSAGE(STATUS "This is BINARY dir " ${PROJECT_SOURCE_DIR})
+ADD_EXECUTABLE(hello main.c)
+```
+
+```
+cd build
+cmake -DCMAKE_INSTALL_PREFIX=/tmp/t3/usr ..
+make
+make install
+```
+
+![Imgur](https://i.imgur.com/QuIOKvR.png)
 
 # Reference
 * [Cmake 实践](http://file.ncnynl.com/ros/CMake%20Practice.pdf)
