--- a/_posts/2019-11-24-CMake-2019.md
+++ b/_posts/2019-11-24-CMake-2019.md
@@ -240,5 +240,104 @@ make install
 
 ![Imgur](https://i.imgur.com/QuIOKvR.png)
 
+# Static and Dynamic Library Build
+```
+#main folder CMakeLists.txt
+
+PROJECT(HELLOLIB)
+ADD_SUBDIRECTORY(lib)
+```
+
+```
+#lib folder CMakeLists
+
+SET(LIBHELLO_SRC hello.c)
+ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
+```
+
+```
+cmake ..
+make
+```
+
+![Imgur](https://i.imgur.com/9lxuJqw.png)
+
+```
+ADD_LIBRARY(libname [SHARED|STATIC|MODULE]
+[EXCLUDE_FROM_ALL]
+source1 source2 ... sourceN)
+
+#SHARED，动态库
+#STATIC，静态库
+#MODULE，在使用 dyld 的系统有效，如果不支持 dyld，则被当作 SHARED 对待。
+
+e.g.
+SET(LIBHELLO_SRC hello.c)
+
+ADD_LIBRARY(hello_shared SHARED ${LIBHELLO_SRC})
+#ADD_LIBRARY(hello STATIC ${LIBHELLO_SRC}) -> Does not work since the target (hello) is duplicated
+ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
+```
+
+![Imgur](https://i.imgur.com/R8dA2XB.png)
+
+
+```
+SET_TARGET_PROPERTIES，其基本语法是：
+  SET_TARGET_PROPERTIES(target1 target2 ...
+      PROPERTIES prop1 value1
+      prop2 value2 ...)
+
+#lib CMakeLists
+
+SET(LIBHELLO_SRC hello.c)
+
+ADD_LIBRARY(hello_shared SHARED ${LIBHELLO_SRC})
+#ADD_LIBRARY(hello STATIC ${LIBHELLO_SRC}) -> Does not work since the target (hello) is duplicated
+ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
+SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
+```
+
+![Imgur](https://i.imgur.com/KkVqEEF.png)
+
+
+
+```
+cmake_minimum_required(VERSION 3.10)
+SET(LIBHELLO_SRC hello.c)
+
+ADD_LIBRARY(hello_shared SHARED ${LIBHELLO_SRC})
+#ADD_LIBRARY(hello STATIC ${LIBHELLO_SRC}) -> Does not work since the target (hello) is duplicated
+ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
+SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
+
+
+GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
+MESSAGE(STATUS "This is the hello_static OUTPUT_NAME:" ${OUTPUT_VALUE})
+```
+
+![Imgur](https://i.imgur.com/8ILWwDG.png)
+
+
+```
+cmake_minimum_required(VERSION 3.10)
+SET(LIBHELLO_SRC hello.c)
+
+ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
+#ADD_LIBRARY(hello STATIC ${LIBHELLO_SRC}) -> Does not work since the target (hello) is duplicated
+ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
+
+
+SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
+SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)
+
+GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
+MESSAGE(STATUS "This is the hello_static OUTPUT_NAME:" ${OUTPUT_VALUE})
+```
+
+![Imgur](https://i.imgur.com/IrRmlaE.png)
+
 # Reference
 * [Cmake 实践](http://file.ncnynl.com/ros/CMake%20Practice.pdf)
