link and include

--- a/_posts/2019-11-24-CMake-2019.md
+++ b/_posts/2019-11-24-CMake-2019.md
@@ -339,5 +339,75 @@ MESSAGE(STATUS "This is the hello_static OUTPUT_NAME:" ${OUTPUT_VALUE})
 
 ![Imgur](https://i.imgur.com/IrRmlaE.png)
 
+
+```
+cmake_minimum_required(VERSION 3.10)
+SET(LIBHELLO_SRC hello.c)
+
+ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
+#ADD_LIBRARY(hello STATIC ${LIBHELLO_SRC}) -> Does not work since the target (hello) is duplicated
+ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
+
+
+SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
+SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)
+
+GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
+
+MESSAGE(STATUS "This is the hello_static OUTPUT_NAME:" ${OUTPUT_VALUE})
+
+INSTALL(TARGETS hello hello_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
+INSTALL(FILES hello.h DESTINATION include/hello)
+```
+
+```
+cd ./build
+cmake -DCMAKE_INSTALL_PREFIX=/usr ..
+make
+sudo make install
+```
+
+![Imgur](https://i.imgur.com/bH8MI1E.png)
+
+![Imgur](https://i.imgur.com/pgIkaFB.png)
+
+# How to use the external shared library and header file
+```
+INCLUDE_DIRECTORIES([AFTER|BEFORE] [SYSTEM] dir1 dir2 ...)
+
+LINK_DIRECTORIES(directory1 directory2 ...)
+
+TARGET_LINK_LIBRARIES(target library1 <debug | optimized> library2...)
+```
+
+```
+cmake_minimum_required(VERSION 3.10)
+
+INCLUDE_DIRECTORIES(/usr/include/hello)
+
+ADD_EXECUTABLE(main main.c)
+
+#TARGET_LINK_LIBRARIES(main hello)
+TARGET_LINK_LIBRARIES(main libhello.so)
+```
+
+![Imgur](https://i.imgur.com/6RbaskV.png)
+
+```
+cmake_minimum_required(VERSION 3.10)
+
+INCLUDE_DIRECTORIES(/usr/include/hello)
+
+ADD_EXECUTABLE(main main.c)
+
+#TARGET_LINK_LIBRARIES(main hello)
+#TARGET_LINK_LIBRARIES(main libhello.so)
+TARGET_LINK_LIBRARIES(main libhello.a)
+```
+
+![Imgur](https://i.imgur.com/z4EN3r8.png)
+
 # Reference
 * [Cmake 实践](http://file.ncnynl.com/ros/CMake%20Practice.pdf)
