--- a/_posts/2019-11-24-CMake-2019.md
+++ b/_posts/2019-11-24-CMake-2019.md
@@ -36,14 +36,14 @@ tags:								#标签
 # First Trial with helloworld example
 
 ```c++
-main.c 文件内容：
+//main.c 文件内容：
 //main.c
 
 #include <stdio.h>
 
 int main()
 {
-  printf(“Hello World from t1 Main!\n”);
+  printf("Hello World from t1 Main!\n");
   return 0;
 }
 ```
@@ -408,6 +408,184 @@ TARGET_LINK_LIBRARIES(main libhello.a)
 ```
 
 ![Imgur](https://i.imgur.com/z4EN3r8.png)
+
+# Common Variables and Environment Variables
+```
+$ENV{NAME}
+SET(ENV{NAME} VALUE)
+```
+
+# Common Commands
+```
+ADD_DEFINITIONS(-DENABLE_DEBUG) -> activate #ifdef DENABLE_DEBUG #endif block
+
+
+ADD_TEST(testname Exename arg1 arg2 ...)
+ADD_TEST(mytest ${PROJECT_BINARY_DIR}/bin/main)
+ENABLE_TESTING() -> make test
+
+
+AUX_SOURCE_DIRECTORY(. SRC_LIST)
+ADD_EXECUTABLE(main ${SRC_LIST})
+
+
+CMAKE_MINIMUM_REQUIRED(VERSION 2.5 FATAL_ERROR)
+
+
+EXEC_PROGRAM(ls ARGS "*.c" OUTPUT_VARIABLE LS_OUTPUT RETURN_VALUE
+LS_RVALUE)
+IF(not LS_RVALUE)
+MESSAGE(STATUS "ls result: " ${LS_OUTPUT})
+ENDIF(not LS_RVALUE)
+
+
+FILE(WRITE filename "message to write"... )
+
+
+INCLUDE(file1 [OPTIONAL])
+INCLUDE(module [OPTIONAL])
+
+
+FIND_LIBRARY 示例：
+FIND_LIBRARY(libX X11 /usr/lib)
+IF(NOT libX)
+MESSAGE(FATAL_ERROR "libX not found")
+ENDIF(NOT libX)
+
+
+IF(expression)
+# THEN section.
+COMMAND1(ARGS ...)
+COMMAND2(ARGS ...)
+...
+ELSE(expression)
+# ELSE section.
+COMMAND1(ARGS ...)
+COMMAND2(ARGS ...)
+...
+ENDIF(expression) -> IF & ENDIF is always paired
+
+
+SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
+
+
+WHILE 指令的语法是：
+WHILE(condition)
+  COMMAND1(ARGS ...)
+  COMMAND2(ARGS ...)
+  ...
+ENDWHILE(condition)
+
+
+FOREACH(loop_var arg1 arg2 ...)
+COMMAND1(ARGS ...)
+COMMAND2(ARGS ...)
+...
+ENDFOREACH(loop_var)
+
+e.g.
+AUX_SOURCE_DIRECTORY(. SRC_LIST)
+FOREACH(F ${SRC_LIST})
+MESSAGE(${F})
+ENDFOREACH(F)
+
+
+FOREACH(loop_var RANGE total)
+ENDFOREACH(loop_var)
+
+e.g.
+FOREACH(VAR RANGE 10)
+MESSAGE(${VAR})
+ENDFOREACH(VAR)
+
+
+FOREACH(loop_var RANGE start stop [step])
+ENDFOREACH(loop_var)
+e.g.
+FOREACH(A RANGE 5 15 3)
+MESSAGE(${A})
+ENDFOREACH(A)
+```
+
+# CMake Predefined Find Module
+## Method 1 - using INCLUDE_DIRECTORIES & TARGET_LINK_LIBRARIES
+```
+//src/main.c
+//
+// Created by aiq on 14/11/19.
+//
+
+#include <curl/curl.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <unistd.h>
+FILE *fp;
+int write_data(void *ptr, size_t size, size_t nmemb, void *stream)
+{
+    int written = fwrite(ptr, size, nmemb, (FILE *)fp);
+    return written;
+}
+int main()
+{
+    const char * path = "/tmp/curl-test";
+    const char * mode = "w";
+    fp = fopen(path,mode);
+    curl_global_init(CURL_GLOBAL_ALL);
+    CURLcode res;
+    CURL *curl = curl_easy_init();
+    curl_easy_setopt(curl, CURLOPT_URL, "http://www.chinaunix.net/");
+    curl_easy_setopt(curl, CURLOPT_WRITEFUNCTION, write_data);
+    curl_easy_setopt(curl, CURLOPT_VERBOSE, 1);
+    res = curl_easy_perform(curl);
+    curl_easy_cleanup(curl);
+}
+```
+
+```
+#project CmakeLists
+
+cmake_minimum_required(VERSION 3.10)
+
+PROJECT(CURLTEST)
+ADD_SUBDIRECTORY(src bin)
+```
+
+```
+#src/CMakeLists.txt
+
+cmake_minimum_required(VERSION 3.10)
+
+ADD_EXECUTABLE(curltest main.c)
+
+INCLUDE_DIRECTORIES(/usr/include)
+TARGET_LINK_LIBRARIES(curltest curl)
+```
+
+## Method 2 - using FindCURL
+
+```
+#src/CMakeLists.txt
+
+cmake_minimum_required(VERSION 3.10)
+
+ADD_EXECUTABLE(curltest main.c)
+
+#INCLUDE_DIRECTORIES(/usr/include)
+#TARGET_LINK_LIBRARIES(curltest curl)
+
+FIND_PACKAGE(CURL)
+IF(CURL_FOUND)
+    INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
+    TARGET_LINK_LIBRARIES(curltest ${CURL_LIBRARY})
+
+    MESSAGE(STATUS "CURL library found")
+ELSE(CURL_FOUND)
+    MESSAGE(FATAL_ERROR "CURL library not found")
+ENDIF(CURL_FOUND)
+```
+
+# Build Custom FindHello Module
+
 
 # Reference
 * [Cmake 实践](http://file.ncnynl.com/ros/CMake%20Practice.pdf)
