--- a/_posts/2019-11-24-CMake-2019.md
+++ b/_posts/2019-11-24-CMake-2019.md
@@ -10,6 +10,8 @@ tags:								#标签
     - CMake
 ---
 
+# [Below Example Source code](https://github.com/frankie-yanfeng/CMakePracticeExample)
+
 # Features
 1. Open Source
 2. Cross Platform
@@ -585,7 +587,47 @@ ENDIF(CURL_FOUND)
 ```
 
 # Build Custom FindHello Module
+```
+mkdir cmake
 
+#FindHELLO.cmake
+FIND_PATH(HELLO_INCLUDE_DIR hello.h /usr/include/hello /usr/local/include/hello)
+
+FIND_LIBRARY(HELLO_LIBRARY NAMES hello PATH /usr/lib /usr/local/lib)
+
+IF (HELLO_INCLUDE_DIR AND HELLO_LIBRARY)
+    SET(HELLO_FOUND TRUE)
+ENDIF (HELLO_INCLUDE_DIR AND HELLO_LIBRARY)
+
+MESSAGE(STATUS "Start ................")
+
+IF (HELLO_FOUND)
+    IF (NOT HELLO_FIND_QUIETLY)
+        MESSAGE(STATUS "Found Hello: ${HELLO_LIBRARY}")
+    ENDIF (NOT HELLO_FIND_QUIETLY)
+ELSE (HELLO_FOUND)
+    IF (HELLO_FIND_REQUIRED)
+        MESSAGE(FATAL_ERROR "Could not find hello library")
+    ENDIF (HELLO_FIND_REQUIRED)
+ENDIF (HELLO_FOUND)
+
+#src/CMakeLists.txt
+cmake_minimum_required(VERSION 3.10)
+
+FIND_PACKAGE(HELLO REQUIRED)
+
+IF(HELLO_FOUND)
+    ADD_EXECUTABLE(hello main.c)
+    INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})
+    TARGET_LINK_LIBRARIES(hello ${HELLO_LIBRARY})
+ENDIF(HELLO_FOUND)
+
+
+#main CMakeLists
+SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+```
+
+![Imgur](https://i.imgur.com/TnYRP79.png)
 
 # Reference
 * [Cmake 实践](http://file.ncnynl.com/ros/CMake%20Practice.pdf)
