--- a/_posts/2019-11-24-CMake-2019.md
+++ b/_posts/2019-11-24-CMake-2019.md
@@ -589,3 +589,4 @@ ENDIF(CURL_FOUND)
 
 # Reference
 * [Cmake 实践](http://file.ncnynl.com/ros/CMake%20Practice.pdf)
+* [跟我一起写 Makefile](https://seisman.github.io/how-to-write-makefile/Makefile.pdf)
